<?xml version="1.0"?>
<package format="2">
  <name>panoramagrid</name>
  <version>0.0.0</version>
  <description>ROS bridge for libpanoramagrid</description>

  <maintainer email="krystiancha@gmail.com">Krystian Chachuła</maintainer>

  <license>TODO</license>

  <url type="repository">https://github.com/krystiancha/panoramagrid.git</url>

  <author email="krystiancha@gmail.com">Krystian Chachuła</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>orocos_kdl</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>orocos_kdl</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export></export>
</package>
